[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Levels/Bathroomv2.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/ExperimentalLevel.gd" type="Script" id=3]
[ext_resource path="res://src/Levels/Bathroomv2_inverted.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.2738, 8.94611 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.1012, 8.42657 )

[node name="ExperimentalLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="BathroomScene1" parent="YSort" instance=ExtResource( 1 )]

[node name="RightExit" type="Area2D" parent="YSort/BathroomScene1"]
position = Vector2( 906.791, 530.272 )
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/BathroomScene1/RightExit"]
position = Vector2( 66.157, 4.44702 )
rotation = 1.5708
shape = SubResource( 1 )
one_way_collision = true

[node name="BathroomScene2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 957.852, 0 )

[node name="LeftExit" type="Area2D" parent="YSort/BathroomScene2"]
position = Vector2( 29.2376, 534.723 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/BathroomScene2/LeftExit"]
position = Vector2( -38.3519, 0.000183105 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 486.505, 491.256 )
scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
position = Vector2( -0.239487, -6.54358 )
current = true
zoom = Vector2( 0.6, 0.6 )

[connection signal="body_entered" from="YSort/BathroomScene1/RightExit" to="." method="_on_RightExit_body_entered"]
[connection signal="body_entered" from="YSort/BathroomScene2/LeftExit" to="." method="_on_LeftExit_body_entered"]

[editable path="YSort/BathroomScene1"]
[editable path="YSort/BathroomScene2"]
